--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 permalink: /:categories/:year/:month/:day/:title 
 
 exclude: ["README.md", "Rakefile"]
-highlighter: rouge
+highlighter: Pygments 
 
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
